--- a/installation.tex
+++ b/installation.tex
@@ -8,15 +8,15 @@ It comes with:
     documents.\footnote{We'll actually install multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
-    Packages are pieces of code that do all sorts of things,
+    Packages are bundles of code that do all sorts of things,
     like provide new commands or change a document's style.
     We'll see lots of them in action throughout this book.
-\item Miscellaneous tools, such as editors.
+\item Miscellaneous tools, like editors.
 \end{enumerate}
 Each major operating system has its own \LaTeX{} distribution:
 \begin{description}
 \item[Mac OS] has Mac\TeX. Grab it from \http{www.tug.org/mactex}
-    and install it per the instructions there.
+    and install it using the instructions there.
 
 \item[Windows] has Mik\TeX.
     Install it from \https{miktex.org/download}.
@@ -57,8 +57,8 @@ in its installation chapter. See Appendix~\ref{resources}.)
 \section{Online options}
 
 If you'd rather not install \LaTeX{} on your computer,
-you can try online editors such as Share\LaTeX{} and Overleaf.
+try online editors like Share\LaTeX{} or Overleaf.
 This book won't focus on these web-based tools,
-but almost all of the same basics apply.
+but the same basics apply.
 Of course, you have less control over certain aspects of online systems,
 like available fonts, the version of \LaTeX{} that's used, and so on.
