--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -344,7 +344,7 @@ Modern
 \null
 \vfill
 {\addfontfeature{Numbers={Proportional,Uppercase}}
-Copyright © 2018 \\
+Copyright © 2018--2019 \\
 by \runauthor
 \bigskip
 
@@ -398,33 +398,21 @@ his college papers.
 \cleardoublepage
 
 \input{why}
-
 \input{installation}
-
 \input{hello}
-
 \input{structure}
-
 \input{textformatting}
-
 \input{punctuation}
-
 \input{pagelayout}
-
 \input{math}
-
 \input{fonts}
-
 \input{micro}
-
 \input{international}
-
 \input{troubleshooting}
 
 \appendix
 
 \input{history}
-
 \input{back}
 
 \end{document}
