--- a/punctuation.tex
+++ b/punctuation.tex
@@ -23,7 +23,7 @@ will get you
 "This isn't right."
 \end{leftfigure}
 Instead, use \texttt{\bfseries `} for opening quotes and \texttt{\bfseries '} for closing
-quotes.\punckern\footnote{If your keyboard layout happens to have keys for
+quotes.\punckern\footnote{If your keyboard happens to have keys for
 ``curly'' quotes (\,\texttt{“}\,\texttt{”}\,), feel free to use those instead!
 Also, don't use \texttt{"} for closing double quotes.
 Not only does \texttt{``example"} look a bit unbalanced,
@@ -61,7 +61,7 @@ serve different purposes.
     \item They are used in phrasal adjectives.
         If I ask for ``five dollar bills''\punckern,
         do I want five \$1 bills, or several \$5 bills?
-        It's clearer that I mean the latter when typeset as
+        It's clearer that I want the latter when typeset as
         \emph{five-dollar bills}.
     \end{itemize}
     Unsurprisingly, they are produced with the hyphen character (\,\texttt{-}\,).
@@ -141,10 +141,6 @@ Launch in 2\,h 10\,m.
 
 \section{What next?}
 \begin{itemize}
-\item Add hyphenations for uncommon words using \verb|\hyphenate|
-    or \verb|\-|\,.\punckern\footnote{\LaTeX{} usually does a good
-    job of automatically hyphenating words, based on a dictionary of patterns
-    stored for each language. You should rarely need to use these commands.}
 \item Learn other commands for spacing, such as \verb|\:|, \verb|\;|,
     \verb|\enspace|, and \verb|\quad|.
 \item Use the \texttt{csquotes} package's \verb|\enquote| to simplify
@@ -154,4 +150,8 @@ Launch in 2\,h 10\,m.
     \introduce{em}, and \introduce{quad}.
 \item Familiarize yourself with the difference between \texttt{/} and
     \verb|\slash|.
+\item Add hyphenations for uncommon words using \verb|\hyphenate|
+    or \verb|\-|\,.\punckern\footnote{\LaTeX{} usually does a good
+    job of automatically hyphenating words, based on a dictionary of patterns
+    stored for each language. You should rarely need to use these commands.}
 \end{itemize}
