--- a/structure.tex
+++ b/structure.tex
@@ -24,12 +24,12 @@ will look.
 As mentioned in \chapref{installation},
 \introduce{packages} contain code to modify your document in interesting ways.
 The ones found in your \LaTeX{} distribution come from the Comprehensive \TeX{}
-Archive Network, or \acronym{ctan},\punckern\footnote{Curious readers may
+Archive Network, or \acronym{ctan},\punckern\footnote{Curious readers might
 be wondering what \TeX{} is, and how it differs from \LaTeX.
 The short answer is that \TeX{} is the typesetting system that \LaTeX{}
-is built on top of---the latter is a framework of commands for the former.
-(For example, \texttt{\textbackslash documentclass} and friends are provided by
-\LaTeX{}, but the \TeX{} engine is what's actually laying out your document.)
+is built on top of---the latter is a framework of commands designed for the former.
+(For example, \texttt{\textbackslash documentclass} and friends come from
+\LaTeX{}, but \TeX{} is what's ultimately laying out your document.)
 The long answer is at the back of this book under Appendix~\ref{history}.
 We won't discuss how to use plain \TeX{} here. That's for another book---the
 \TeX book.}
@@ -59,11 +59,11 @@ should get you a \textsc{pdf} that reads
 \end{leftfigure}
 \end{samepage}
 \verb|\usepackage| accepts optional arguments,
-which it passes to the package you are importing.
+which it passes to the package you're importing.
 The \texttt{geometry} package, for instance,
 takes your desired paper size and margins.
 For \acronym{us}~\textsc{l}etter paper with one-inch margins,
-you type:
+type:
 \begin{leftfigure}
 \begin{lstlisting}
 \usepackage[
@@ -119,7 +119,7 @@ and \LaTeX{} figured out that it was chapter~\ref{structure}.
 
 As promised, this book isn't a comprehensive reference,
 but it \emph{will} point you to places where you can learn more.
-We'll wrap up most chapters with a list of related topics you could
+We'll wrap up most chapters with some related topics that you can
 explore next.
 
 Consider learning how to:
