--- a/math.tex
+++ b/math.tex
@@ -30,8 +30,8 @@ we get
 \section{Examples}
 
 Typesetting mathematics is arguably the raison d'être of
-\LaTeX,\punckern\footnote{Well, \TeX} but the topic is so broad that giving
-it decent coverage would take up half of this book.
+\LaTeX,\punckern\footnote{Well, \TeX} but the topic is so broad that we could
+take up half of this book to give it basic coverage.
 Given how wide the field of mathematics is,
 there are \emph{many} different commands and environments.
 Here, more so than any other topic,
@@ -41,10 +41,7 @@ Before moving on, though, let's show some examples of what it can do.
 \newpage
 
 \begin{enumerate}
-% We're going to cheat a bit here,
-% since getting \sin, \cos, etc. to be Latin Modern is oddly tricky,
-% even when using the unicode-math package
-\item \verb|x = \frac{-b \pm \sqrt{b^2 - 4 a c}}{2a}|
+\item \verb|x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}|
     \[x = \frac{-b \pm \sqrt{b^2 - 4 a c}}{2a} \]
 
 \item \verb|e^{j \theta} = \cos(\theta) + j \sin(\theta)|
