Lat night intro tweaks

--- a/hello.tex
+++ b/hello.tex
@@ -133,6 +133,7 @@ so if some command needed two arguments, we would type:
 \somecommand{argument1}{argument2}
 \end{lstlisting}
 \end{leftfigure}
+
 Many commands also take optional arguments.
 They precede the mandatory ones,
 are enclosed in square brackets, and are separated by commas.
@@ -204,8 +205,8 @@ once upon a time, users would typeset ``jalapeño'' with
 \verb|jalape\~no|.
 Today we just type \texttt{ñ} into our source
 file.\punckern\footnote{This can be easier or harder depending
-on your keyboard, your editor, and language settings in your \acronym{os}.
-We'll talk much more about languages and Unicode fun in \chapref{i18n}.}
+on your keyboard, your editor, and your language settings in your \acronym{os}.
+We'll talk more about languages and Unicode fun in \chapref{i18n}.}
 
 If you're wondering why we print \texttt{\textbackslash} with
 \verb|\textbackslash| instead of \verb|\\|\,,
