--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -117,8 +117,7 @@ then indents all subsequent lines for that item:
 \begin{lstlisting}
 \begin{description}
 \item[Alan Turing] was a British mathematician who
-    laid much of the groundwork for the field
-    of computer science.
+    laid much of the groundwork for computer science.
     He is perhaps most remembered for his model of
     computation, the Turing machine.
 \item[Edsger Dijkstra] was a Dutch computer scientist.
@@ -136,8 +135,7 @@ gives us
 \lm%
 \begin{description}[leftmargin=*]
 \item[\lm Alan Turing] was a British mathematician who
-    laid much of the groundwork for the field
-    of computer science.
+    laid much of the groundwork for computer science.
     He is perhaps most remembered for his model of computation,
     the Turing machine.
 \item[\lm Edsger Dijkstra] was a Dutch computer scientist.
