--- a/textformatting.tex
+++ b/textformatting.tex
@@ -164,7 +164,8 @@ the line below.
 Leading is important---without it, blocks of text become uncomfortable to
 read, especially at normal body sizes.\par}
 Let your type breathe.\punckern\footnote{For a discussion of how much leading
-to use, see \textit{Practical Typography}, listed in Appendix~\ref{resources}.}
+to use, see \textit{Practical Typography},
+as mentioned in Appendix~\ref{resources}.}
 
 \section{What next?}
 \begin{itemize}
