--- a/fonts.tex
+++ b/fonts.tex
@@ -297,7 +297,7 @@ which are used to set ordinals
 fractions (\,\otffrac{25}{624}\,), and so on.
 They have the same weight as the rest of the font's characters,
 offering a more consistent look than shrunken versions of full-sized figures.
-(Compare the examples above to
+(Compare the examples above to their imposters:
 {\fontspec[OpticalSize=0]{garamondpremrpro}%
 \mbox{1\textsuperscript{st}},
 \mbox{2\textsuperscript{nd}},
