--- a/installation.tex
+++ b/installation.tex
@@ -1,11 +1,11 @@
 \chapter{Installation}
 \label{installation}
 
-You install \LaTeX{} on your computer from a \introduce{distribution}.
+You install \LaTeX{} on your computer as a \introduce{distribution}.
 It comes with:
 \begin{enumerate}
 \item \LaTeX, the program---the thing that typesets text files into
-    documents.\footnote{We'll actually install multiple \LaTeX{} programs,
+    documents.\footnote{Well, actually, multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
     Packages are bundles of code that do all sorts of things,
@@ -56,7 +56,7 @@ in its installation chapter. See Appendix~\ref{resources}.)
 
 \section{Online options}
 
-If you'd rather not install \LaTeX{} on your computer,
+If you can't be bothered to install \LaTeX{} on your computer,
 try online editors like Share\LaTeX{} or Overleaf.
 This book won't focus on these web-based tools,
 but the same basics apply.
