--- a/international.tex
+++ b/international.tex
@@ -14,7 +14,7 @@ Today, computers usually represent text with Unicode. Briefly,
     each of which can represent a character to be drawn,
     an accent or other diacritical mark to combine with an adjacent
     character,
-    or some non-printing character,
+    or formatting information,
     such as an instruction to print subsequent text right-to-left.
 \item One or more of these code points combines to represent a
     \introduce{grapheme cluster} or \introduce{glyph},
