--- a/math.tex
+++ b/math.tex
@@ -31,8 +31,8 @@ we get
 
 Typesetting mathematics is arguably the raison d'être of
 \LaTeX,\punckern\footnote{Well, \TeX} but the topic is so broad that we could
-take up half of this book to give it basic coverage.
-Given how wide the field of mathematics is,
+take dozens of pages covering just the basics.
+Given the breadth of modern mathematics,
 there are \emph{many} different commands and environments.
 Here, more so than any other topic,
 you owe it to yourself to find some real references and learn what \LaTeX{}
