--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -154,8 +154,8 @@ We often split layouts into several columns, especially when printing on
 \textsc{a4} or \acronym{us}~\textsc{l}etter paper,
 since it allows more comfortable line widths at standard
 8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
-on where you look, but as a rule of thumb, design layouts to have
-between 45 and 80 characters (including spaces) per line.
+on where you look, but as a rule of thumb,
+aim for 45 to 80 characters (including spaces) per line.
 If a line is too long, readers have an uncomfortable time scanning for
 the start of the next one.
 If a line is too short, it doesn't have much inter-word spacing to adjust,
