--- a/structure.tex
+++ b/structure.tex
@@ -28,8 +28,8 @@ Archive Network, or \acronym{ctan},\punckern\footnote{Curious readers might
 be wondering what \TeX{} is, and how it differs from \LaTeX.
 The short answer is that \TeX{} is the typesetting system that \LaTeX{}
 is built on top of---the latter is a framework of commands designed for the former.
-(For example, \texttt{\textbackslash documentclass} and friends come from
-\LaTeX{}, but \TeX{} is what's ultimately laying out your document.)
+(\texttt{\textbackslash documentclass} and friends come from
+\LaTeX{}, for example, but \TeX{} is what's ultimately laying out your document.)
 The long answer is at the back of this book under Appendix~\ref{history}.
 We won't discuss how to use plain \TeX{} here. That's for another book---the
 \TeX book.}
@@ -120,11 +120,11 @@ and \LaTeX{} figured out that it was chapter~\ref{structure}.
 As promised, this book isn't a comprehensive reference,
 but it \emph{will} point you to places where you can learn more.
 We'll wrap up most chapters with some related topics that you can
-explore next.
+explore on your own.
 
 Consider learning how to:
 \begin{itemize}
-\item Automatically start your document with its title, the author's name,
+\item Automatically start your document with its title, your name,
     and the date using \verb|\maketitle|.
 \item Build a table of contents
     with \verb|\tableofcontents|.
