--- a/textformatting.tex
+++ b/textformatting.tex
@@ -78,7 +78,7 @@ but can be adjusted by passing arguments to
 \texttt{10pt}, \texttt{11pt}, or \texttt{12pt} as optional arguments.
 KOMA~Script classes accept arbitrary sizes with
 \monobox{fontsize=<size>}.}
-To scale text relative to this size, use the following commands:
+To scale text relative to this default size, use the following commands:
 \begin{flushleftfigure}
 \lm%
 \renewcommand{\arraystretch}{1.1}%
@@ -163,7 +163,7 @@ descenders from one line almost collide with ascenders and capitals on
 the line below.
 Leading is important---without it, blocks of text become uncomfortable to
 read, especially at normal body sizes.\par}
-Let your type breathe.\punckern\footnote{For a discussion of how much leading
+Let your type breathe!\footnote{For a discussion of how much leading
 to use, see \textit{Practical Typography},
 as mentioned in Appendix~\ref{resources}.}
 
