--- a/why.tex
+++ b/why.tex
@@ -5,8 +5,9 @@ Modern life is a parade of written language.
 Wherever you go,
 ads, apps, articles, essays, emails, and messages
 shove text in your face.
-But when you read that text, you see so much more than the authors' word choice.
-Consciously or not, you notice the letters' shapes and sizes.
+But when you read that text, you see so much more than the authors'
+verbiage.
+Consciously or not, you notice the shapes and sizes of letters.
 You notice how those letters are arranged into words,
 how those words are arranged into paragraphs,
 how those paragraphs are arranged onto pages and screens.
@@ -147,10 +148,8 @@ There are plenty of great resources online.
 
 Unfortunately, most of the introductions you will find have two fatal flaws:
 they are long, and they are old.
-Their length is anathema to newcomers---if somebody wants to learn about \LaTeX{},
-recommending a 200+ page book isn't very encouraging.
-The guides' age matters because of how much typesetting has changed since 1986.
-
+A 200+ page book seems daunting to anybody just trying to learn the basics,
+and age matters because of how much typesetting has changed since 1986.
 When \LaTeX{} was first released that year, none of the publishing technologies
 we use today existed.
 Adobe wouldn't debut their Portable Document Format for seven more years,
@@ -165,7 +164,7 @@ obsolete---multiple times---is a testament to its staying power.}
 The good news is that  \LaTeX{} has improved by leaps and bounds in recent years.
 It's time for a guide that doesn't weigh you down with decades of legacy
 or try (in vain) to be a comprehensive reference.
-After all, you're a smart, resourceful individual who can search the web.
+After all, you're a smart, resourceful individual who sling a search engine.
 This book will:
 
 \begin{enumerate}
