Draft mode off for online

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -5,7 +5,7 @@
 % We're using KOMA Script to hand-tune footnotes and TOC appearance.
 % It should be available in your texlive distribution,
 % which is how most distros package LaTeX.
-\documentclass[fontsize=11bp, numbers=endperiod, draft=true]{scrbook}
+\documentclass[fontsize=11bp, numbers=endperiod, draft=false]{scrbook}
 
 % Hm: https://mailman.ntg.nl/pipermail/dev-luatex/2019-February/006186.html
 \automatichyphenmode=1
