Major rework of the first page

--- a/why.tex
+++ b/why.tex
@@ -1,11 +1,11 @@
 \chapter{Typography and You}
 \label{typography}
 
-Modern life is a parade of written language.
+Life is a parade of written language.
 Wherever you go,
 ads, apps, articles, essays, emails, and messages
 shove text in your face.
-But when you read that text, you see so much more than the authors'
+But when you read that text, you see so much more than the author's
 verbiage.
 Consciously or not, you notice the shapes and sizes of letters.
 You notice how those letters are arranged into words,
@@ -21,29 +21,22 @@ you wrote in school.
 Do many books look this way? Why not?
 \end{leftfigure}
 \medskip
-
-\noindent Typography is why you might think of a shoe company that took
-its name from a Greek goddess when you see this:
+\noindent There is a reason street signs don't look like this:
 \begin{leftfigure}
-\fontspec{FuturaCon-ExtBol}\Large JUST DO IT LATER.
+\fontspec[Scale=MatchUppercase]{KJV1611}\Large E Gorham St.
 \end{leftfigure}
-With typography's help, two men landed their spaceship on a dusty alien plain.
-Their ship carried a plaque, etched with the same shapes that adorned every
-switch, knob, and readout inside. The plaque looked like this:
-\begin{center}
-\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Med}
-HERE MEN FROM THE PLANET EARTH \\
-FIRST SET FOOT UPON THE MOON \\
-JULY 1969, A.~D. \\
-WE CAME IN PEACE FOR ALL MANKIND
-\end{center}
+And why an important switch in a spaceship might be labeled like this:
+\begin{leftfigure}
+\fontspec[Scale=MatchUppercase]{Futura-Med}CM/SM SEP
+\end{leftfigure}
+Not like this:
+\begin{leftfigure}
+\fontspec{Old Script}\Large CM/SM Sep
+\end{leftfigure}
 
+Written communication is as much about the shapes and layout of your words
+as it is about the ones you choose.
 Good typography isn't just art---it's function.
-It draws readers in,
-sets their expectations, and builds a subliminal brand for your
-work.\punckern\endnote{Erik Spiekermann, ``Type is Visible Language''
-(presented at Beyond Tellerrand, Düsseldorf, Germany, May 19--21, 2014),
-\https{www.youtube.com/watch?v=ggQpDu63kk0}}
 And if you care about any of this,
 you you should try \LaTeX,\punckern\footnote{Pronounced ``lay-tech''
 or ``lah-tech''}
